CTCTRADERS-1112 | Updating stylesheet to correctly align input currency prefix

--- a/app/assets/stylesheets/partials/_input-currency.scss
+++ b/app/assets/stylesheets/partials/_input-currency.scss
@@ -6,9 +6,9 @@
 .hmrc-currency-input__unit--pence,
 .hmrc-currency-input__unit {
     position: absolute;
-    bottom: 2px;
+    bottom: 1px;
     left: 2px;
-    top: 2px;
+    top: 3px;
     width: 1.5rem;
     text-align: center;
     background: #dee0e2;
